--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,4 @@
-/* traitement du bouton*/
+/* traitement du bouton produit*/
 #select {
   text-align: center;
 }
@@ -6,6 +6,31 @@
 #select .addBasket {
   background-color: darkorchid;
   color: white;
+}
+
+/* traitement du bouton panier*/
+.button {
+  margin-top: 30px;
+}
+
+/* traitement du formulaire*/
+#recapForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#recapForm .form {
+  -webkit-box-shadow: 10px 5px 5px gray;
+          box-shadow: 10px 5px 5px gray;
+  margin-left: 30px;
+  height: 400px;
+  border: 3px solid black;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 40px;
 }
 
 /*Traitement du Header*/
@@ -83,36 +108,6 @@ footer p {
   cursor: pointer;
 }
 
-/* traitement du formulaire*/
-.form {
-  height: 400px;
-  border: 3px solid black;
-  border-radius: 5px;
-  text-align: center;
-  margin-left: 10px;
-  padding-top: 40px;
-}
-
-.form .button {
-  margin-top: 30px;
-}
-
-/*Page Panier*/
-#recapForm {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-table {
-  width: 600px;
-  border: 2px solid black;
-}
-
-table td {
-  border: 2px solid black;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -124,7 +119,6 @@ body a {
   text-decoration: none;
 }
 
-/* Barre de navigation*/
 .page {
   width: 100%;
   height: 1000px;
@@ -153,6 +147,8 @@ main #oursons .teddie1 {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   border: 2px solid black;
+  -webkit-box-shadow: 10px 5px 5px gray;
+          box-shadow: 10px 5px 5px gray;
   border-radius: 5px;
   width: 550px;
   height: 500px;
@@ -180,6 +176,17 @@ main #oursons img {
   cursor: pointer;
 }
 
+/*Page Panier*/
+table {
+  width: 400px;
+  height: auto;
+  border: 2px solid black;
+}
+
+table td {
+  border: 2px solid black;
+}
+
 /*Responsive */
 @media screen and (max-width: 768px) {
   .teddie1 {
@@ -194,7 +201,8 @@ main #oursons img {
   }
   #recapForm .form {
     margin-top: 10px;
-    margin: 0;
+    width: auto;
+    height: auto;
   }
 }
 
