--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,82 +1,6 @@
 
-@import"../sass/components/components.scss";
-@import"../sass/layouts/layouts.scss";
+@import"../sass/components/buttons.scss";
+@import"../sass/components/form.scss";
+@import"../sass/layouts/navigation.scss";
+@import"../sass/layouts/footer.scss";
 @import"../sass/pages/pages.scss";
-body {
-     margin: 0;
-     padding: 0;
-    background-color:#e4cce3;
-    font-family: 'Noto Serif', serif;;
-    a{
-        text-decoration: none;
-    }
-}
-/* Barre de navigation*/
-.page{
-    width: 100%;
-    height: 1000px;
-}
-
-     h1{
-         text-align: center;
-     }
-     
-     main{
-         display: flex;
-         justify-content: center;
-         #oursons{
-             flex-wrap: wrap;
-             .teddie1{
-                 max-width: 100%;
-                justify-content: space-around;
-                border:2px solid black;
-                border-radius: 5px;
-                width: 550px;
-                height: 500px;
-                background-color: blanchedalmond;
-                margin-top: 10px;
-                .name{
-                    font-weight: bolder;
-
-                }
-                .descriptionPrice{
-                    text-align: center;
-                }
-                .prix{
-                    font-weight: bolder;
-                    text-align: center;
-                }
-             }
-             img{
-                 max-width: 100%;
-                 width: 500px;
-                 height: auto;
-                 cursor: pointer;
-
-             }
-         }
-        }        
-     
-     
-/*Responsive */
- @media screen and (max-width: 768px){
-    .teddie1{
-        max-width: 768px;
-    }
-    #recapForm{
-        display: flex;
-        flex-wrap: wrap;
-        .form{
-            margin-top: 10px;
-            margin: 0;
-        }
-    }
-
- }
- @media screen and (max-width: 425px){
-    .teddie1{
-        width: auto !important;
-        height: auto !important;
-    } 
-    
- }
