--- a/sass/pages/pages.scss
+++ b/sass/pages/pages.scss
@@ -1,13 +1,89 @@
-  
-   /*Page Panier*/
+body {
+    margin: 0;
+    padding: 0;
+   background-color:#e4cce3;
+   font-family: 'Noto Serif', serif;;
+   a{
+       text-decoration: none;
+   }
+}
+.page{
+   width: 100%;
+   height: 1000px;
+}
+
+    h1{
+        text-align: center;
+    }
+    
+    main{
+        display: flex;
+        justify-content: center;
+        #oursons{
+            flex-wrap: wrap;
+            .teddie1{
+                max-width: 100%;
+               justify-content: space-around;
+               border:2px solid black;
+               box-shadow: 10px 5px 5px gray;
+               border-radius: 5px;
+               width: 550px;
+               height: 500px;
+               background-color: blanchedalmond;
+               margin-top: 10px;
+               .name{
+                   font-weight: bolder;
+
+               }
+               .descriptionPrice{
+                   text-align: center;
+               }
+               .prix{
+                   font-weight: bolder;
+                   text-align: center;
+               }
+            }
+            img{
+                max-width: 100%;
+                width: 500px;
+                height: auto;
+                cursor: pointer;
+            }
+        }
+       }        
+     /*Page Panier*/
+   table{
+    width: 400px;
+    height: auto;
+    border: 2px solid black;
+    td{
+        border: 2px solid black; 
+     }
+ }
+    
+/*Responsive */
+@media screen and (max-width: 768px){
+   .teddie1{
+       max-width: 768px;
+   }
    #recapForm{
        display: flex;
-   }
-   table{
-       width: 600px;
-       border: 2px solid black;
-       td{
-           border: 2px solid black;
+       flex-wrap: wrap;
+       .form{
+           margin-top: 10px;
+           width: auto;
+           height: auto;
        }
    }
+
+}
+@media screen and (max-width: 425px){
+   .teddie1{
+       width: auto !important;
+       height: auto !important;
+   } 
+   
+}
+
+  
   
