--- a/frontend/sass/components/form.scss
+++ b/frontend/sass/components/form.scss
@@ -2,7 +2,7 @@
 #recapForm{
     display: flex;
     justify-content: space-around;
-    .form{
+    #form{
      box-shadow: 10px 5px 5px gray;
      margin-left: 30px;
      height:400px;
