--- a/frontend/sass/components/form.css
+++ b/frontend/sass/components/form.css
@@ -7,7 +7,7 @@
       justify-content: space-around;
 }
 
-#recapForm .form {
+#recapForm #form {
   -webkit-box-shadow: 10px 5px 5px gray;
           box-shadow: 10px 5px 5px gray;
   margin-left: 30px;
