--- a/frontend/sass/components/form.scss
+++ b/frontend/sass/components/form.scss
@@ -3,12 +3,16 @@
     display: flex;
     justify-content: space-around;
     #form{
-     box-shadow: 10px 5px 5px gray;
+     box-shadow: 10px 5px 5px rebeccapurple;
      margin-left: 30px;
      height:400px;
-     border: 3px solid black;
+     border: 3px solid #6E1F9E;
      border-radius: 5px;
      text-align: center;
      padding-top: 40px;
     }
+}
+label{
+    display: block;
+
 }
