--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -23,14 +23,18 @@
 }
 
 #recapForm #form {
-  -webkit-box-shadow: 10px 5px 5px gray;
-          box-shadow: 10px 5px 5px gray;
+  -webkit-box-shadow: 10px 5px 5px rebeccapurple;
+          box-shadow: 10px 5px 5px rebeccapurple;
   margin-left: 30px;
   height: 400px;
-  border: 3px solid black;
+  border: 3px solid #6E1F9E;
   border-radius: 5px;
   text-align: center;
   padding-top: 40px;
+}
+
+label {
+  display: block;
 }
 
 /*Traitement du Header*/
