--- a/frontend/sass/components/buttons.scss
+++ b/frontend/sass/components/buttons.scss
@@ -9,4 +9,52 @@
   /* traitement du bouton panier*/
   .button{
     margin-top: 30px;
+    #buttonForm{
+      background-color: #6e53b8;
+    border:2px solid white;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    }
+}
+#clearBasket{
+  background-color: #6e53b8;
+  border:2px solid white;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  
+}
+#supprimer{
+  background-color: #6e53b8;
+  border:2px solid white;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+#addBasket{
+  background-color: #6e53b8;
+  border:2px solid white;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
 }
