--- a/frontend/sass/components/buttons.scss
+++ b/frontend/sass/components/buttons.scss
@@ -58,3 +58,15 @@
   cursor: pointer;
   margin-top: 10px;
 }
+#retour{
+  background-color: #6e53b8;
+  border:2px solid white;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+}
