--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -64,6 +64,19 @@
   margin-top: 10px;
 }
 
+#retour {
+  background-color: #6e53b8;
+  border: 2px solid white;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
 /* traitement du formulaire*/
 #recapForm {
   display: -webkit-box;
@@ -301,6 +314,20 @@ table td {
   border: 3px solid blueviolet;
   -webkit-box-shadow: 10px 5px 5px gray;
           box-shadow: 10px 5px 5px gray;
+}
+
+.confirmation {
+  width: auto;
+  height: 500px;
+}
+
+#total {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #6e53b8;
+  border: 2px solid white;
+  color: white;
 }
 
 /*Responsive */
