--- a/frontend/sass/pages/pages.scss
+++ b/frontend/sass/pages/pages.scss
@@ -106,7 +106,20 @@ body {
      border:3px solid blueviolet;
      box-shadow:10px 5px 5px gray;
  }
-    
+//page confirmation
+.confirmation{
+    width:auto;
+    height:500px;
+    footer{
+        
+    }
+}
+#total{
+width: fit-content;
+background-color: #6e53b8;
+border:2px solid white;
+color: white;
+}
 /*Responsive */
 @media screen and (max-width: 768px){
    .teddie1{
