changement de style

--- a/frontend/sass/layouts/footer.css
+++ b/frontend/sass/layouts/footer.css
@@ -29,4 +29,9 @@ footer p {
   color: blanchedalmond;
   cursor: pointer;
 }
+
+.confirmation footer {
+  position: absolute;
+  bottom: 0;
+}
 /*# sourceMappingURL=footer.css.map */
