--- a/frontend/sass/layouts/footer.scss
+++ b/frontend/sass/layouts/footer.scss
@@ -3,7 +3,7 @@
     width: 100%;
     margin-top: 20px;
     bottom: 0;
-    
+   
     background-color:black;
     color: blanchedalmond;
     display: flex;
@@ -18,4 +18,8 @@
             color: blanchedalmond;
             cursor: pointer;
         }
+}
+.confirmation footer{
+position: absolute;
+bottom: 0;
 }
