--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -176,11 +176,21 @@ footer p {
   cursor: pointer;
 }
 
+.confirmation footer {
+  position: absolute;
+  bottom: 0;
+}
+
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: #e4cce3;
   font-family: 'Noto Serif', serif;
+  height: 100%;
 }
 
 body a {
@@ -190,6 +200,8 @@ body a {
 .page {
   width: 100%;
   height: 1000px;
+  min-height: 100%;
+  position: relative;
 }
 
 h1 {
@@ -319,6 +331,7 @@ table td {
 .confirmation {
   width: auto;
   height: 500px;
+  min-height: 100%;
 }
 
 #total {
@@ -353,6 +366,9 @@ table td {
   .teddie1 {
     width: auto !important;
     height: auto !important;
+  }
+  .confirmation footer {
+    position: relative;
   }
 }
 /*# sourceMappingURL=main.css.map */
