--- a/frontend/sass/pages/pages.css
+++ b/frontend/sass/pages/pages.css
@@ -1,8 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: #e4cce3;
   font-family: 'Noto Serif', serif;
+  height: 100%;
 }
 
 body a {
@@ -12,6 +17,8 @@ body a {
 .page {
   width: 100%;
   height: 1000px;
+  min-height: 100%;
+  position: relative;
 }
 
 h1 {
@@ -141,6 +148,7 @@ table td {
 .confirmation {
   width: auto;
   height: 500px;
+  min-height: 100%;
 }
 
 #total {
@@ -175,6 +183,9 @@ table td {
   .teddie1 {
     width: auto !important;
     height: auto !important;
+  }
+  .confirmation footer {
+    position: relative;
   }
 }
 /*# sourceMappingURL=pages.css.map */
