--- a/frontend/sass/pages/pages.scss
+++ b/frontend/sass/pages/pages.scss
@@ -1,8 +1,12 @@
+html{
+    height: 100%;
+}
 body {
     margin: 0;
     padding: 0;
-   background-color:#e4cce3;
-   font-family: 'Noto Serif', serif;;
+    background-color:#e4cce3;
+    font-family: 'Noto Serif', serif;
+    height: 100%;
    a{
        text-decoration: none;
    }
@@ -10,6 +14,8 @@ body {
 .page{
    width: 100%;
    height: 1000px;
+   min-height: 100%;
+   position: relative;
 }
 
     h1{
@@ -110,9 +116,8 @@ body {
 .confirmation{
     width:auto;
     height:500px;
-    footer{
-        
-    }
+    min-height: 100%;
+
 }
 #total{
 width: fit-content;
@@ -141,7 +146,9 @@ color: white;
        width: auto !important;
        height: auto !important;
    } 
-   
+   .confirmation footer{
+       position: relative;
+   }
 }
 
   
